# C_Vector

./: .gitignore  README.MD  main.c
Generic_Collections/: .gitignore  BUILD.MD  CMakelists.txt
Generic_Collections/include/: LinkedList.h  generic_utils.h  vector.h
Generic_Collections/src/: LinkedList.c
Generic_Collections/test/: CMakeLists.txt  test_ll.c  test_ll.h
LLVM_IR/: dortIslem.ll  main.ll
SRC/: dortIslem.c
Vector/: .gitignore  BUILD.MD  CMakelists.txt
Vector/lib/Debug/: vector.exp  vector.lib
Vector/src/: CMakelists.txt  test.c  test.h  vector.c
Vector/src/lib/: vector.c  vector.h  vector_utils.h
Vector/src/lib/include/: vector_utils.h
creating_a_shared_lib/: CMakelists.txt  build.bat
creating_a_shared_lib/src/: mathkut.c
creating_a_shared_lib/test/: CMakelists.txt  main.c  mathkut.h
